Source/WebCore/loader/DocumentLoader.cpp
@@ -478,6 +478,8 @@ bool DocumentLoader::isLoadingInAPISense() const
             return true;
         if (m_cachedResourceLoader->requestCount())
             return true;
+        if (doc->processingLoadEvent())
+            return true;
         if (doc->hasActiveParser())
             return true;
     }
